--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,7 @@
 cmake_minimum_required(VERSION 3.26)
-project(glsl_to_cpp VERSION 0.1.0 LANGUAGES CXX)
-
-set(CMAKE_CXX_STANDARD 23)
-
-set(THIRD_PARTY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party)
 
 find_package(Git REQUIRED)
+
 execute_process(
   COMMAND ${GIT_EXECUTABLE} rev-parse --short HEAD
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
@@ -20,10 +16,27 @@ execute_process(
   OUTPUT_STRIP_TRAILING_WHITESPACE
 )
 
-add_compile_definitions(GLSL_TO_CPP_VERSION="v${CMAKE_PROJECT_VERSION}")
+execute_process(
+  COMMAND ${GIT_EXECUTABLE} describe --tags --abbrev=0
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  OUTPUT_VARIABLE GIT_TAG_NAME
+  OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+if (GIT_TAG_NAME STREQUAL "")
+  set(GIT_TAG_NAME "0.0.0")
+endif()
+
+project(glsl_to_cpp VERSION ${GIT_TAG_NAME} LANGUAGES CXX)
+
+set(CMAKE_CXX_STANDARD 23)
+
+add_compile_definitions(GLSL_TO_CPP_VERSION="${GIT_TAG_NAME}")
 add_compile_definitions(GLSL_TO_CPP_COMMIT="${GIT_COMMIT_HASH}")
 add_compile_definitions(GLSL_TO_CPP_BRANCH="${GIT_BRANCH_NAME}")
 add_compile_definitions(GLSL_TO_CPP_COMPILER="${CMAKE_CXX_COMPILER_ID}")
+
+set(THIRD_PARTY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party)
 
 add_executable(glsl_to_cpp
   src/main.cpp
